feat: include genres in get books api + add dtos for standardized responses
